Feature: Add bulk workflow completion notification job and listener (#86)
* Add BulkWorkflowResourceListener to observe /etc/acs-commons/bulk-workflow-manager,
    filtered to workspace node changes to minimize job fan-out
  * Add BulkWorkflowJobConsumer to send email notification when a bulk
    workflow run completes, using dedicated pillar-read-service-user
  * Add SimplePageEventHandler to enqueue jobs on page lifecycle events
  * Add EmailUtil for user email lookup and author link generation
  * Add JobHelper to centralize simple job creation
  * Move handler classes to common.events package
  * Add SimpleJobConsumer.JobType enum; update JOB_TOPIC
  * Add granular OSGi logging configs for jobs, listeners, models, workflows